downgraded to java 8